# zeropath

./: .env.example  .gitignore  DEPLOYMENT.md  GCP_SETUP.md  Makefile  PRD.md  README.md  cloudbuild.frontend.yaml  frompartner.md
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1d97124cec74_initial_schema.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  enums.py  finding_identity.py  finding_occurrence.py  finding_triage.py  repository.py  scan.py  scan_file.py  user.py
backend/app/routers/: comparison.py  findings.py  repositories.py  scans.py
backend/app/schemas/: __init__.py  comparison.py  findings.py  repositories.py  scans.py
backend/app/services/: github_deeplink.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: FindingCard.tsx  Layout.tsx  SeverityBadge.tsx  StatusBadge.tsx
infra/: .terraform.tfstate.lock.info  database.tf  main.tf  outputs.tf  pubsub.tf  secrets.tf  services.tf  terraform.tfvars.example  variables.tf
worker/: .dockerignore  Dockerfile  pyproject.toml
worker/app/: config.py  database.py  main.py
worker/app/models/: __init__.py  enums.py  finding_identity.py  finding_occurrence.py  finding_triage.py  repository.py  scan.py  scan_file.py
worker/app/scanner/: file_discovery.py  llm_client.py  pipeline.py  prompts.py
worker/app/services/: __init__.py  finding_persistence.py  fingerprint.py  scan_lifecycle.py  scan_runner.py
worker/tests/: test_fingerprint.py  test_scanner_pipeline.py
(+5 files in other folders)
